--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,9 @@
   "buildCommand": "cd apps/web && npm install && npm run build",
   "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps",
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./apps/web",
   "devCommand": "cd apps/web && npm run dev",
-  "rewrites": [
-    {
-      "source": "/.well-known/farcaster.json",
-      "destination": "/apps/web/public/.well-known/farcaster.json"
-    }
-  ],
   "headers": [
     {
       "source": "/.well-known/farcaster.json",
@@ -21,6 +16,15 @@
         {
           "key": "Access-Control-Allow-Origin",
           "value": "*"
+        }
+      ]
+    },
+    {
+      "source": "/:path*",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "ALLOWALL"
         }
       ]
     }
