fix: make husky optional in CI environments

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "turbo run test",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "prepare": "husky install"
+    "prepare": "node -e \"try { require('husky').install() } catch (e) { if (process.env.CI !== 'true') throw e }\""
   },
   "devDependencies": {
     "turbo": "^2.0.0",
