--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,31 +10,31 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@coinbase/onchainkit": "^1.1.2",
     "@farcaster/frame-sdk": "^0.0.15",
-    "wagmi": "^2.12.0",
-    "viem": "^2.21.0",
     "@tanstack/react-query": "^5.56.0",
-    "framer-motion": "^11.5.0",
-    "recharts": "^2.12.0",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.0"
+    "framer-motion": "^11.5.0",
+    "leaflet": "^1.9.4",
+    "next": "^15.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-leaflet": "^4.2.1",
+    "recharts": "^2.12.0",
+    "tailwind-merge": "^2.5.0",
+    "viem": "^2.21.0",
+    "wagmi": "^2.12.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/leaflet": "^1.9.12",
-    "typescript": "^5.5.0",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.45",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.0"
+    "eslint-config-next": "^15.0.0",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.0"
   }
 }
-
