--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,8 +17,8 @@
     "framer-motion": "^11.5.0",
     "leaflet": "^1.9.4",
     "next": "^15.0.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.12.0",
     "tailwind-merge": "^2.5.0",
@@ -28,8 +28,8 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/node": "^22.5.0",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.0",
