--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,5 +36,9 @@
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.0"
+  },
+  "overrides": {
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   }
 }
