fix: update all workspaces to React 19 RC with global overrides
- Add overrides to root package.json for global React 19 enforcement
- Update packages/ui to use React 19 RC
- Update apps/web to use React 19 RC with caret range
- Use types-react@rc for proper type definitions
- Ensures consistent React 19 across entire monorepo
- Fixes 'Module not found: react-dom' on Vercel

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,13 +9,13 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "react": "^18.3.1",
+    "react": "^19.0.0-rc",
     "framer-motion": "^11.5.0",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.5",
+    "@types/react": "npm:types-react@rc",
     "typescript": "^5.5.0"
   }
 }
