--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,8 +17,8 @@
     "framer-motion": "^11.5.0",
     "leaflet": "^1.9.4",
     "next": "^15.0.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^19.0.0-rc",
+    "react-dom": "^19.0.0-rc",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.12.0",
     "tailwind-merge": "^2.5.0",
@@ -38,7 +38,7 @@
     "typescript": "^5.5.0"
   },
   "overrides": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react": "^19.0.0-rc",
+    "react-dom": "^19.0.0-rc"
   }
 }
