--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "packageManager": "npm@10.8.0",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "overrides": {
+    "react": "^19.0.0-rc",
+    "react-dom": "^19.0.0-rc"
   }
 }
 
