refactor: clean up codebase and simplify wallet connection
BREAKING CHANGE: Removed unused monorepo packages

- Remove packages/contracts, packages/agent, packages/ui (not used yet)
- Remove duplicate documentation files from root
- Replace providers.tsx with SimpleWalletProvider (proven approach)
- Remove wagmi.ts config (now in SimpleWalletProvider)
- Add client-side config checking to prevent SSR issues
- Reduce dependencies from 1386 to 972 packages (-414!)
- Fix wallet button by using working pattern from prompt-game-generator

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "description": "AI Fortune Teller - Farcaster Mini App for career resilience assessment",
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/*"
   ],
   "scripts": {
     "dev": "turbo run dev",
