--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "AI Fortune Teller",
   "short_name": "Fortune",
-  "description": "Discover your career fate in the age of AI. Get free fortunes or pay for premium AI strategies & NFTs.",
+  "description": "Discover your career fate in the age of AI. Connect your wallet and get AI-powered career insights.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0a0e1a",
