refactor: remove all wallet/crypto functionality
BREAKING CHANGE: Removed all wallet connection requirements

Removed:
- WalletButton, SimpleWalletProvider, ConnectedQuiz components
- @coinbase/onchainkit, wagmi, viem, @tanstack/react-query dependencies
- Wallet provider from layout.tsx
- Wallet connection requirement from home page

Changed:
- Home page now shows quiz directly after clicking 'Begin Reading'
- Updated metadata and manifest to remove wallet references
- Simplified user flow: Click button -> Fill quiz -> See results

The app is now a simple fortune teller with no blockchain/wallet requirements

--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "AI Fortune Teller",
   "short_name": "Fortune",
-  "description": "Discover your career fate in the age of AI. Connect your wallet and get AI-powered career insights.",
+  "description": "Discover your career fate in the age of AI. Get AI-powered career insights based on real job market data.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0a0e1a",
