--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,7 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^1.1.2",
     "@farcaster/frame-sdk": "^0.0.15",
-    "@tanstack/react-query": "^5.56.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.0",
     "leaflet": "^1.9.4",
@@ -21,9 +19,7 @@
     "react-dom": "^19.0.0-rc",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.12.0",
-    "tailwind-merge": "^2.5.0",
-    "viem": "^2.21.0",
-    "wagmi": "^2.12.0"
+    "tailwind-merge": "^2.5.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
