--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.15",
+    "@tanstack/react-query": "^5.90.6",
+    "@wagmi/core": "^2.22.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.0",
     "leaflet": "^1.9.4",
@@ -19,7 +21,9 @@
     "react-dom": "^19.0.0-rc",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.12.0",
-    "tailwind-merge": "^2.5.0"
+    "tailwind-merge": "^2.5.0",
+    "viem": "^2.38.6",
+    "wagmi": "^2.19.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
