--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@wagmi/core": "^2.22.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "next": "^15.0.0",
     "react": "^19.0.0-rc",
